--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
     "vaul": "^1.1.2",
+    "vercel": "^48.1.4",
     "zod": "^4.1.11"
   },
   "devDependencies": {
